# CodeForces-Problems

./: codeforces_problems.csv  setup_problem.sh
100_problems_a/soft_drinking/: solution.cpp  solution.h  solution_test.cpp
100_problems_a/system_of_eq/: CMakeLists.txt  solution.cpp  solution.h  solution_test.cpp
100_problems_a/tram/: CMakeLists.txt  solution.cpp  solution.h  solution_test.cpp
100_problems_b/anton_digits_2/: CMakeLists.txt  solution.cpp  solution.h  solution_test.cpp
